--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.6",
     "@primeng/themes": "^19.0.10",
+    "embla-carousel-angular": "^19.0.0",
     "express": "^4.18.2",
     "postcss": "^8.5.3",
     "primeflex": "^4.0.0",
